--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </form>
         </div>
     </div>
+    <div class="main-container">
+
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
