Added a class to search bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="text">Movies Guide App</p>
         <div class="search-from">
             <form action="#">
-                <input type="text" placeholder="Search Movies">
+                <input type="text" class="formInput" placeholder="Search Movies">
                 <button class="form-search-btn">Search</button>
             </form>
         </div>
