--- a/index.html
+++ b/index.html
@@ -24,50 +24,56 @@
                 <button class="text-xs px-8   py-2 rounded-md searchBtn active:bg-blue-700 bg-blue-500">Search</button>
             </form>
         </div>
-        <div class="detailsContainer">
+        <div class="detailsContainer px-10">
             <div class="detailBox">
                 <div class="img-container   flex item-center justify-center ">
                     <img src="https://th.bing.com/th?id=OIP.NqFYgMiuHbc_byT2CPCHAgHaJ8&w=215&h=289&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
                         class="h-96 w-72 rounded-md" alt="">
                 </div>
                 <div class="title text-yellow-500 font-bold text-3xl text-center py-4">
-                    Avatar
+                    <!-- Avatar -->
                 </div>
                 <div class="year  text-xs text-center">
                     <span class="font-bold "> Year:</span>
-                    2016 <span class="font-bold">Ratings: </span>PG-13 <span class="font-bold"> Released :</span> 26
-                    February 2016
+                    <span class="y-date">2016</span> <span class="font-bold">Ratings: </span><span
+                        class="r-rating">PG-13</span> <span class="font-bold"> Released :</span><span
+                        class="r-y-date">26
+                        February 2016</span>
                 </div>
                 <div class="genre flex items-center py-2 justify-center text-center  ">
                     <div class="wrapper border-[.2px] px-4 bg-gray-800 "><span class="font-bold">Genre:</span>
-                        Action, Adventure
+                        <span class="r-genre">Action, Adventure</span>
                     </div>
                 </div>
                 <div class="writers   text-center">
-                    <span class="font-bold">Writer :</span> Max Werner
+                    <span class="font-bold">Writer :</span><span class="r-writer"> Max Werner</span>
                 </div>
-                <div class="actors  text-center"><span class="font-bold">Actors :</span> Joquain Phoenix</div>
-                <div class="plot text-center py-4"><span class="font-bold text-yellow-500">Plot</span> Lorem ipsum,
-                    dolor sit
-                    amet
-                    consectetur adipisicing elit. Ad repellendus at cupiditate consectetur obcaecati, quo labore itaque
-                    consequuntur quasi et.
+                <div class="actors  text-center"><span class="font-bold">Actors :</span> <span class="r-actors">Joquain
+                        Phoenix</span></div>
+                <div class="plot text-center py-4"><span class="font-bold text-yellow-500">Plot</span><span
+                        class="r-plot">Lorem ipsum,
+                        dolor sit
+                        amet
+                        consectetur adipisicing elit. Ad repellendus at cupiditate consectetur obcaecati, quo labore
+                        itaque
+                        consequuntur quasi et.</span>
                 </div>
 
 
             </div>
-            <div class="footer py-6 px-4 flex items-center justify-center    bg-slate-600">
-                <div class="socials flex  space-x-8 gap-4 text-xs">
-                    <a href="">Github <i class="fa-brands fa-square-github"></i></a>
-                    <a href="">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
-                    <a href="">Discord <i class="fa-brands fa-discord"></i></a>
 
-                </div>
+        </div>
+        <div class="footer  py-6 px-4 flex items-center justify-center    bg-slate-600">
+            <div class="socials flex  space-x-8 gap-4 text-xs">
+                <a href="">Github <i class="fa-brands fa-square-github"></i></a>
+                <a href="">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
+                <a href="">Discord <i class="fa-brands fa-discord"></i></a>
 
             </div>
         </div>
     </div>
     </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
