Removed the extra div

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <span class="font-bold">Writer :</span><span class="r-writer"> Max Werner</span>
                 </div>
                 <div class="actors  text-center"><span class="font-bold">Actors :</span> <span class="r-actors">Joquain
-                        Phoenix</span></div>
+                        Phoenix</span>
+                </div>
                 <div class="plot text-center py-4"><span class="font-bold text-yellow-500">Plot</span><span
                         class="r-plot">Lorem ipsum,
                         dolor sit
@@ -71,7 +72,6 @@
 
             </div>
         </div>
-    </div>
     </div>
     <script src="app.js"></script>
 </body>
